# AcademicPublicationManager

./: .gitignore  README.extras.md  README.md  requirements.txt
.github/workflows/: ci-cd.yml
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/__MODULE_NAME__/: base.json  program.py
src/academic_publication_manager/: BaseBodyUi.py  BaseContextMenu.py  BaseMenuBar.py  BaseToolBar.py  about.py  base-mywork.json  base-zero.json  base.json  desktop.py  program.py
src/academic_publication_manager/modules/: customtreeview.py  production.py  to_bibtex.py
